--- a/styles/main-h5.css
+++ b/styles/main-h5.css
@@ -6,9 +6,9 @@ header{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-header-2 img{
+.header-2 img{
   width: 100%;
-  height: 200px;
+  height: 100%;
   display: block;
 }
 /* header */
@@ -111,14 +111,30 @@ input{
 
 /*main articule*/
 .main-articule{
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  justify-items: center;
 }
 
-.main-articule2{
-  width: 1fr;
+.main-articule figure img {
+  width: 100%;
+  padding:10px
 }
+
+.main-articule h2{
+  font-size: 36px;
+  font-weight: bold;
+  color: #1F3F68;
+  letter-spacing: 0.04em;
+  line-height: 46px;
+}
+
+.main-articule p{
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  line-height: 26px;
+}
+
 
 /*articule bottom*/
 .articule-bottom{
