--- a/styles/main-h5.css
+++ b/styles/main-h5.css
@@ -165,6 +165,48 @@ input{
   padding-left: 20px;
 }
 
+/*Secondaries articule*/
+.secondaries-articules{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+  justify-content: center;
+}
+
+.secondarie-articules2{
+  padding: 10px;
+}
+
+.secondarie-articules2 figure img {
+  width: 100%;
+  padding:10px
+}
+
+.secondarie-articules2 h2{
+  font-size: 22px;
+  font-weight: bold;
+  color: #1F3F68;
+  letter-spacing: 0.04em;
+  line-height: 32px;
+}
+
+.secondarie-articules2 p{
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  line-height: 26px;
+  padding-bottom: 30px;
+}
 
 
-
+/* SEE ALL ARTCULES*/
+.popular-articules{ 
+    letter-spacing: 0.04em;
+    color: #356EAD;
+    opacity: 0.8;
+    font-size: 16px;
+    font-weight: bold;
+    padding-top: 30px;
+    text-align: right;
+    padding-bottom: 20px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+}
