--- a/styles/main-h5.css
+++ b/styles/main-h5.css
@@ -241,3 +241,16 @@ input{
 }
 
 /*Post*/
+.post{
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+
+.post a{
+  text-decoration: none;
+  color: #356EAD;
+  font-weight: bold;
+  font-size: 16px;
+}
